--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <header>ALURAFLIX</header>
+<link rel="styleshee"    hfef="style" />
+<head>
 
-
+<body>
 <H1>RELEMBRE OS 3 MUNDIAIS DO SÃO PAULO FUTEBOL CLUBE!
 </H1>
 
