--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <header>ALURAFLIX</header>
-<link rel="styleshee"    hfef="style" />
+
+<link rel="stylesheet"    href="style.css" />
 <head>
 
 <body>
