--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <header>ALURAFLIX</header>
 
 <link rel="stylesheet"    href="style.css" />
+<titulo
 <head>
 
 <body>
+
 <H1>RELEMBRE OS 3 MUNDIAIS DO SÃO PAULO FUTEBOL CLUBE!
 </H1>
 
