--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <header>ALURAFLIX</header>
-
 <link rel="stylesheet"    href="style.css" />
 <titulo
-<head>
-
+<header>
 <body>
-
 <H1>RELEMBRE OS 3 MUNDIAIS DO SÃO PAULO FUTEBOL CLUBE!
 </H1>
 
